<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textColor="@color/depaul_red"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_ghost"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_ghost"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/etName"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_ghost"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start Date"
            app:layout_constraintTop_toBottomOf="@id/etPhone"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

        <DatePicker
            android:id="@+id/dpStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            app:layout_constraintTop_toBottomOf="@id/tvStartDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="End Date"
            app:layout_constraintTop_toBottomOf="@id/dpStartDate"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

        <DatePicker
            android:id="@+id/dpEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            app:layout_constraintTop_toBottomOf="@id/tvEndDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <Spinner
            android:id="@+id/spLaptopModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dpEndDate"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <CheckBox
            android:id="@+id/cbInsurance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Insurance"
            app:layout_constraintTop_toBottomOf="@id/spLaptopModel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

        <RadioGroup
            android:id="@+id/rgPaymentMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cbInsurance"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp">

            <RadioButton
                android:id="@+id/rbCreditCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Credit Card"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cash"
                android:layout_marginStart="16dp"/>

        </RadioGroup>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/rgPaymentMethod"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnReset"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/rgPaymentMethod"
            app:layout_constraintStart_toEndOf="@id/btnSubmit"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/tvFormCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_count"
            app:layout_constraintTop_toBottomOf="@id/btnSubmit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>